Fix scroll up jumping

--- a/src/app/infinite-list/infinite-list.component.css
+++ b/src/app/infinite-list/infinite-list.component.css
@@ -10,13 +10,11 @@
 .infinite-list-holder {
     width: 100%;
     height: 95vh;
-    background-color: tomato;
     position: relative;
 }
 
 .list-item {
     height: 200px;
     width: 100%;
-    border-bottom: 1px solid blue;
     position: absolute;
 }
